Adding html to index for page skeleton

--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <DOCTYPE html>
     <html>
         <head>
-            <title></title>
+            <title>My Coding Journey</title>
         </head>
         <body>
-            <p>cole hellman</p>
+            <header>How I Got Here</header>
+            <main>
+                <article>
+                    <p>A friend's suggestion to get involved with Launchcode helped me discover I have a passion for programming.  Before I joined Launchcode I had no idea what I wanted to do with my professional career.  I knew I loved technology, &amp; I wanted it to be a big part of my job.  Launchcode showed me how to accomplish this goal.</p>
+                    <p>Launchcode provides many learning opportunities.  I have taken multiple classes from Launchcode.  There also groups to participate in once you class is over with.  My ultimate goal with Launchcode is to get a web developer job through their mentorship program.  Here are the programs I have done through Launchcode:
+                    </p>
+                    <img src="images/launch+code.png" alt="Launchcode logo">
+                    <ul>
+                        <li>Hello, World</li>
+                        <li>Summer of Code</li>
+                        <li>LC101</li>
+                        <li>Mentorship Tuesdays</li>
+                        <li>Launchcode candidate</li>
+                    </ul>
+                    <img src="images/coding.jpg" alt="A computer screen &amp; text editor">
+                    <p>I am very grateful for Launchcode, &amp; the opportunities it has afforded me.  Without Launchcode, I would most likely still have no idea what I wanted to do for a career.  Launchcode has helped give me direction &amp; a tangible goal.  I will continue my learning journey with Launchcode.  I recommend anyone with an interest in coding to see what they have to offer.
+                    </p>
+            </main>
+            <footer>
+            
+        </footer>
         </body>
+        
     </html>
