Modified html to improve css

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <DOCTYPE html>
     <html>
         <head>
+            <link rel="stylesheet" type="text/css" href="styles.css">
             <title>My Coding Journey</title>
         </head>
         <body>
             <header>How I Got Here</header>
             <main>
-                <article>
+                <article class="text">
                     <p>A friend's suggestion to get involved with Launchcode helped me discover I have a passion for programming.  Before I joined Launchcode I had no idea what I wanted to do with my professional career.  I knew I loved technology, &amp; I wanted it to be a big part of my job.  Launchcode showed me how to accomplish this goal.</p>
                     <p>Launchcode provides many learning opportunities.  I have taken multiple classes from Launchcode.  There also groups to participate in once you class is over with.  My ultimate goal with Launchcode is to get a web developer job through their mentorship program.  Here are the programs I have done through Launchcode:
                     </p>
                     <img src="images/launch+code.png" alt="Launchcode logo">
-                    <ul>
+                    <ul id="list">
                         <li>Hello, World</li>
                         <li>Summer of Code</li>
                         <li>LC101</li>
